<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_background"
    android:elevation="6dp">

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/orange"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/exit"
        app:layout_constraintVertical_bias="0.571" />

    <ImageView
        android:id="@+id/price_2"
        android:layout_width="21dp"
        android:layout_height="19dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/price_1"
        app:layout_constraintEnd_toEndOf="@+id/price_1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/price_1"
        app:layout_constraintTop_toTopOf="@+id/price_1"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@drawable/filter_item" />

    <ImageView
        android:id="@+id/size_2"
        android:layout_width="21dp"
        android:layout_height="19dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/size_1"
        app:layout_constraintEnd_toEndOf="@+id/size_1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/size_1"
        app:layout_constraintTop_toTopOf="@+id/size_1"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@drawable/filter_item" />

    <ImageView
        android:id="@+id/exit"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exit" />

    <ImageView
        android:id="@+id/brand_2"
        android:layout_width="21dp"
        android:layout_height="19dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/brand_1"
        app:layout_constraintEnd_toEndOf="@+id/brand_1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/brand_1"
        app:layout_constraintTop_toTopOf="@+id/brand_1"
        app:srcCompat="@drawable/filter_item" />

    <TextView
        android:id="@+id/size_1"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/text_background"
        android:paddingStart="10sp"
        android:text="@string/size_1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size" />

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/size"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_1" />

    <TextView
        android:id="@+id/price_1"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/text_background"
        android:paddingStart="10sp"
        android:paddingTop="5sp"
        android:text="@string/price_1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price0" />

    <TextView
        android:id="@+id/price0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/price"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand_1" />

    <TextView
        android:id="@+id/filterOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/filter_options"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/brand"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit" />

    <TextView
        android:id="@+id/brand_1"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/text_background"
        android:paddingStart="10sp"
        android:paddingTop="5sp"
        android:text="@string/brand_1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand" />

</androidx.constraintlayout.widget.ConstraintLayout>