<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/shop_d1"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shop_det1" />

    <ImageView
        android:id="@+id/shop_d2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        app:layout_constraintBottom_toBottomOf="@+id/shop_d1"
        app:layout_constraintStart_toEndOf="@+id/shop_d1"
        app:layout_constraintTop_toTopOf="@+id/shop_d1"
        app:srcCompat="@drawable/shop_det2" />

    <ImageView
        android:id="@+id/shop_d3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/shop_d2"
        app:layout_constraintStart_toEndOf="@+id/shop_d2"
        app:layout_constraintTop_toTopOf="@+id/shop_d2"
        app:srcCompat="@drawable/shop_det3" />

    <ImageView
        android:id="@+id/shop_d4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        app:layout_constraintBottom_toBottomOf="@+id/shop_d3"
        app:layout_constraintStart_toEndOf="@+id/shop_d3"
        app:layout_constraintTop_toTopOf="@+id/shop_d3"
        app:srcCompat="@drawable/shop_det4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/shop1"
        android:textColor="@color/shop_text_gray"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/shop_d1"
        app:layout_constraintStart_toStartOf="@+id/shop_d1"
        app:layout_constraintTop_toBottomOf="@+id/shop_d1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/shop2"
        android:textColor="@color/shop_text_gray"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/shop_d2"
        app:layout_constraintStart_toStartOf="@+id/shop_d2"
        app:layout_constraintTop_toBottomOf="@+id/shop_d2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/shop3"
        android:textColor="@color/shop_text_gray"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/shop_d3"
        app:layout_constraintStart_toStartOf="@+id/shop_d3"
        app:layout_constraintTop_toBottomOf="@+id/shop_d3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/shop4"
        android:textColor="@color/shop_text_gray"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/shop_d4"
        app:layout_constraintStart_toStartOf="@+id/shop_d4"
        app:layout_constraintTop_toBottomOf="@+id/shop_d4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="29dp"
        android:text="@string/select_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/color_shop1"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/color1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/color_shop1"
        app:layout_constraintEnd_toEndOf="@+id/color_shop1"
        app:layout_constraintStart_toStartOf="@+id/color_shop1"
        app:layout_constraintTop_toTopOf="@+id/color_shop1"
        app:srcCompat="@drawable/shop_color" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/color_shop1"
        app:layout_constraintStart_toEndOf="@+id/color_shop1"
        app:layout_constraintTop_toTopOf="@+id/color_shop1"
        app:srcCompat="@drawable/color2" />

    <Button
        android:id="@+id/shop_btn"
        android:layout_width="71dp"
        android:layout_height="31dp"
        android:layout_marginStart="58dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/shop5"
        android:textSize="13sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <Button
        android:id="@+id/shop_btn2"
        android:layout_width="71dp"
        android:layout_height="31dp"
        android:layout_marginStart="34dp"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/shop5"
        android:textColor="@color/shop_text_dark_gray"
        android:textSize="13sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/shop_btn"
        app:layout_constraintStart_toEndOf="@+id/shop_btn"
        app:layout_constraintTop_toTopOf="@+id/shop_btn" />

    <Button
        android:id="@+id/add_to_cart_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_to_cart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_shop1" />
</androidx.constraintlayout.widget.ConstraintLayout>