<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/gray_background">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_background"
        android:backgroundTint="@color/back_background"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_back" />

    <ImageView
        android:id="@+id/btn_cart"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/layout_background"
        android:backgroundTint="@color/orange"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_cart" />

    <TextView
        android:id="@+id/productDetails"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="16dp"
        android:text="@string/product_details"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_info"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/layout_background"
        app:layout_constraintTop_toBottomOf="@+id/product_info"
        app:layout_constraintVertical_bias="0.0"
        android:elevation="8dp">

        <FrameLayout
            android:id="@+id/plaseHolder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_details_tab_layoyt">

        </FrameLayout>

        <ImageView
            android:id="@+id/star_1"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/product_detail_title"
            app:layout_constraintTop_toBottomOf="@+id/product_detail_title"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/star_2"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/star_1"
            app:layout_constraintStart_toEndOf="@+id/star_1"
            app:layout_constraintTop_toTopOf="@+id/star_1"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/star_3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/star_2"
            app:layout_constraintStart_toEndOf="@+id/star_2"
            app:layout_constraintTop_toTopOf="@+id/star_2"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/star_4"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/star_3"
            app:layout_constraintStart_toEndOf="@+id/star_3"
            app:layout_constraintTop_toTopOf="@+id/star_3"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/star_5"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/star_4"
            app:layout_constraintStart_toEndOf="@+id/star_4"
            app:layout_constraintTop_toTopOf="@+id/star_4"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/product_detail_like"
            android:layout_width="37dp"
            android:layout_height="33dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/layout_background"
            android:backgroundTint="@color/back_background"
            android:padding="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.979"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/product_detail_title"
            app:srcCompat="@drawable/like_product_details" />

        <TextView
            android:id="@+id/product_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="18dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Galaxy" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/product_details_tab_layoyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/star_1"
            app:layout_constraintVertical_bias="0.0"
            app:tabUnboundedRipple="false">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/features" />
        </com.google.android.material.tabs.TabLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>