<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/gray_background">

        <ImageView
            android:id="@+id/select1"
            android:layout_width="71dp"
            android:layout_height="71dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_category"
            app:srcCompat="@drawable/ellipse_white" />


        <ImageView
            android:id="@+id/select1_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/select1"
            app:layout_constraintEnd_toEndOf="@+id/select1"
            app:layout_constraintStart_toStartOf="@+id/select1"
            app:layout_constraintTop_toTopOf="@+id/select1"
            app:srcCompat="@drawable/phone"
            app:tint="@color/gray" />

        <ImageView
            android:id="@+id/select2"
            android:layout_width="71dp"
            android:layout_height="0dp"
            android:layout_marginStart="23dp"
            app:layout_constraintBottom_toBottomOf="@+id/select1"
            app:layout_constraintStart_toEndOf="@+id/select1"
            app:layout_constraintTop_toTopOf="@+id/select1"
            app:srcCompat="@drawable/ellipse_white" />

        <ImageView
            android:id="@+id/select2_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/select2"
            app:layout_constraintEnd_toEndOf="@+id/select2"
            app:layout_constraintStart_toStartOf="@+id/select2"
            app:layout_constraintTop_toTopOf="@+id/select2"
            app:srcCompat="@drawable/computer" />

        <ImageView
            android:id="@+id/select3"
            android:layout_width="71dp"
            android:layout_height="0dp"
            android:layout_marginStart="23dp"
            app:layout_constraintBottom_toBottomOf="@+id/select2"
            app:layout_constraintStart_toEndOf="@+id/select2"
            app:layout_constraintTop_toTopOf="@+id/select2"
            app:srcCompat="@drawable/ellipse_white" />

        <ImageView
            android:id="@+id/select3_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/select3"
            app:layout_constraintEnd_toEndOf="@+id/select3"
            app:layout_constraintStart_toStartOf="@+id/select3"
            app:layout_constraintTop_toTopOf="@+id/select3"
            app:srcCompat="@drawable/health" />

        <ImageView
            android:id="@+id/select4"
            android:layout_width="71dp"
            android:layout_height="0dp"
            android:layout_marginStart="23dp"
            app:layout_constraintBottom_toBottomOf="@+id/select3"
            app:layout_constraintStart_toEndOf="@+id/select3"
            app:layout_constraintTop_toTopOf="@+id/select3"
            app:srcCompat="@drawable/ellipse_white" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/select4"
            app:layout_constraintEnd_toEndOf="@+id/select4"
            app:layout_constraintStart_toStartOf="@+id/select4"
            app:layout_constraintTop_toTopOf="@+id/select4"
            app:srcCompat="@drawable/books" />

        <TextView
            android:id="@+id/select_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="8dp"
            android:text="@string/select_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hot_sales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="4dp"
            android:text="@string/hot_sales"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select1" />

        <TextView
            android:id="@+id/best_seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="4dp"
            android:text="@string/best_seller"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_hot_sales" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hot_sales"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hot_sales" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/best_seller_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/best_seller" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>